# BraTS-Toolkit

./: .gitignore  .readthedocs.yaml  0_preprocessing_batch.py  0_preprocessing_single.py  1_segmentation.py  2_fusion.py  LICENSE  README.md  index.html  pyproject.toml  references.bib  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: release.yml  tests.yml
brats_toolkit/: _version.py  cli.py  fusionator.py  preprocessor.py  segmentor.py
brats_toolkit/config/: cpu_dockers.json  dockers.json  dockers_demo.json  fileformats.json  gpu_dockers.json  survival_dockers.json
brats_toolkit/util/: citation_reminder.py  docker_functions.py  filemanager.py  own_itk.py  prep_utils.py
brats_toolkit/util/backend_scripts/: unix_docker.sh  unix_docker_gpu.sh  win_docker.cmd
docs/: requirements.txt
docs/_build/doctrees/: brats_toolkit.doctree  brats_toolkit.util.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  brats_toolkit.html  brats_toolkit.util.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: brats_toolkit.rst.txt  index.rst.txt
docs/source/: brats_toolkit.rst  brats_toolkit.util.rst  conf.py  index.rst  modules.rst
example_data/output_preprocessor_batch/OtherEXampleFromTCIA/registrations/: OtherEXampleFromTCIA_fla_to_t1_0GenericAffine.mat  OtherEXampleFromTCIA_native_t1_to_brats_0GenericAffine.mat  OtherEXampleFromTCIA_t1c_to_t1_0GenericAffine.mat  OtherEXampleFromTCIA_t2_to_t1_0GenericAffine.mat
example_data/output_preprocessor_batch/TCGA-DU-7294/registrations/: TCGA-DU-7294_fla_to_t1_0GenericAffine.mat  TCGA-DU-7294_native_t1_to_brats_0GenericAffine.mat  TCGA-DU-7294_t1c_to_t1_0GenericAffine.mat  TCGA-DU-7294_t2_to_t1_0GenericAffine.mat
example_data/output_preprocessor_single/TCGA-DU-7294/registrations/: TCGA-DU-7294_fla_to_t1_0GenericAffine.mat  TCGA-DU-7294_native_t1_to_brats_0GenericAffine.mat  TCGA-DU-7294_t1c_to_t1_0GenericAffine.mat  TCGA-DU-7294_t2_to_t1_0GenericAffine.mat
