[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["brats_toolkit"]

[tool.setuptools.dynamic]
#version = {attr = "my_package.VERSION"}
readme = {file = "README.md"}

[tool.setuptools_scm]
write_to = "brats_toolkit/_version.py"

[project]
name = "BraTS-Toolkit"
dynamic = ["version"]
authors = [
  {name="Florian Kofler", email="florian.kofler@tum.de"},
  {name="Christoph Berger", email="c.berger@tum.de"},
  {name="Isra Mekki", email="isra.mekki@helmholtz-muenchen.de"},
  {name="Mahyar Valizadeh", email="mahyar.valizadeh@helmholtz-muenchen.de"},
]
maintainers = [
  {name="Florian Kofler", email="florian.kofler@tum.de"},
  {name="Isra Mekki", email="isra.mekki@helmholtz-muenchen.de"},
  {name="Mahyar Valizadeh", email="mahyar.valizadeh@helmholtz-muenchen.de"},
]
description = "BraTS Toolkit is a holistic approach to brain tumor segmentation and consists of three components: First, the BraTS Preprocessor facilitates data standardization and preprocessing for researchers and clinicians alike. It covers the entire image analysis workflow prior to tumor segmentation, from image conversion and registration to brain extraction. Second, BraTS Segmentor enables orchestration of BraTS brain tumor segmentation algorithms for generation of fully-automated segmentations. Finally, Brats Fusionator can combine the resulting candidate segmentations into consensus segmentations using fusion methods such as majority voting and iterative SIMPLE fusion."
keywords = ["brain tumor", "glioma", "BraTS", "segmentation", "fusion", "skullstripping", "brain extraction"]
readme = "README.md"
# requires-python = "==3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    'SimpleITK==2.1.1.2',
    'numpy==1.22.0',
    'python-engineio==3.14.2',
    'python-socketio==4.6.1',
    'requests==2.24.0'
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
brats-segment = "brats_toolkit.cli:segmentation"
brats-fuse = "brats_toolkit.cli:fusion"
brats-batch-preprocess = "brats_toolkit.cli:batchpreprocess"
brats-preprocess = "brats_toolkit.cli:singlepreprocess"

[project.urls]
# documentation = "TODO"
repository = "https://github.com/neuronflow/BraTS-Toolkit"
