[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
name = "BraTS-Toolkit"
version = "0.0.0"                                                                                                                                                                 # will be overwritten by poetry-dynamic-versioning but needs to be set
description = "BraTS Toolkit is a holistic approach to brain tumor segmentation allowing to build modular pipeliens for preprocessing, segmentation and fusion of segmentations."
license = "AGPL-3.0"

authors = [
  "Florian Kofler <florian.kofler@tum.de>",
  "Christoph Berger <c.berger@tum.de>",
  "Isra Mekki <isra.mekki@helmholtz-muenchen.de>",
  "Mahyar Valizadeh <mahyar.valizadeh@helmholtz-muenchen.de>",
  "Marcel Rosier <marcel.rosier@tum.de>",
]

maintainers = [
  "Florian Kofler <florian.kofler@tum.de>",
  "Isra Mekki <isra.mekki@helmholtz-muenchen.de>",
  "Mahyar Valizadeh <mahyar.valizadeh@helmholtz-muenchen.de>",
  "Marcel Rosier <marcel.rosier@tum.de>",
]

readme = "README.md"
repository = "https://github.com/neuronflow/BraTS-Toolkit"
documentation = "https://brats-toolkit.readthedocs.io/en/latest/"

keywords = [
  "brain tumor",
  "glioma",
  "BraTS",
  "segmentation",
  "fusion",
  "skullstripping",
  "brain extraction",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"

# core
SimpleITK = "^2.3.1"
numpy = "^1.23.0"
python-engineio = "^3.14.2"
python-socketio = "^4.6.1"
requests = "^2.24.0"

# pretty citation reminder
rich = "^13.6.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
brats-segment = 'brats_toolkit.cli:segmentation'
brats-fuse = 'brats_toolkit.cli:fusion'
brats-batch-preprocess = 'brats_toolkit.cli:batchpreprocess'
brats-preprocess = 'brats_toolkit.cli:singlepreprocess'

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=7.0.0"
sphinx-copybutton = ">=0.5.2"
sphinx-rtd-theme = ">=1.3.0"
myst-parser = ">=2.0.0"
